feat: import DeviceMockup component for potential use.

--- a/src/components/landing/DeepFeatures.astro
+++ b/src/components/landing/DeepFeatures.astro
@@ -6,6 +6,7 @@ import { Image } from "astro:assets";
 import screenMedications from "../../assets/images/screens/screen-04-medications.PNG";
 import screenWellness from "../../assets/images/screens/screen-18-wellness.PNG";
 import screenSymptoms from "../../assets/images/screens/screen-13-symptoms.PNG";
+import DeviceMockup from "../DeviceMockup.astro";
 
 interface Props {
     lang: Lang;
